[package]
name = "hyperion-command"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
bumpalo = "3.16.0"
color-eyre.workspace = true
eyre.workspace = true
flecs_ecs.workspace = true
heapless.workspace = true
hyperion.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
valence_protocol.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
